# grooveback

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-plan-code-architecture.md  0003-run-apollo-on-target-distribution-and-analyse-results.md
src/grooveback/: audio.py  data.py  degradations.py  evaluation.py  inference.py  losses.py  metrics.py  models.py  training.py
src/grooveback/cli/: evaluate.py  infer.py  train.py  validate_degradation.py
