[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grooveback"
version = "0.1.0"
description = "Music super-resolution for degraded electronic music rips"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "einops>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]
eval = [
    "pesq",
    "pystoi",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
